--- a/style.css
+++ b/style.css
@@ -6,4 +6,12 @@
 }
 body{
     background: #222;
+
 }
+.card{
+    width: 90%;
+    max-width: 470%;
+    background: linear-gradiant(135deg, #00feba, #5b548a);
+    color: #fff;
+    margin: 100px auto0;
+} 
